--- a/index.html
+++ b/index.html
@@ -562,18 +562,12 @@
           <div class="brand-wrap">
             <!-- اللوقو الاحترافي -->
             <div class="logo-wrapper">
-              <div class="logo-inner">
-                <div class="logo-ground"></div>
+    <div class="logo-inner">
+        <div class="candles"></div>
+        <div class="trend-line"></div>
+    </div>
+</div>
 
-                <div class="logo-candle bull c1"></div>
-                <div class="logo-candle bull c2"></div>
-                <div class="logo-candle bear c3"></div>
-                <div class="logo-candle bull c4"></div>
-
-                <div class="logo-curve"></div>
-                <div class="logo-arrow-down"></div>
-              </div>
-            </div>
 
             <div class="brand">
               <div class="brand-title">Busultan Trading</div>
