--- a/index.html
+++ b/index.html
@@ -1101,3 +1101,13 @@
   </script>
 </body>
 </html>
+
+<div class="tabs">
+    <button class="tab-btn" data-tab="position">Position Sizing / حجم اللوت</button>
+    <button class="tab-btn" data-tab="dashboard">Dashboard / اللوحة</button>
+    <button class="tab-btn" data-tab="charts">Charts / الرسومات</button>
+    <button class="tab-btn" data-tab="analytics">Analytics / التحليل</button>
+    <button class="tab-btn" data-tab="risk">Risk Engine / إدارة المخاطر</button>
+    <button class="tab-btn" data-tab="settings">Settings / الإعدادات</button>
+    <button class="tab-btn" data-tab="reports">Reports / التقارير</button>
+</div>
